syntax = "proto3";

package games;

service GamesService {
  rpc FindOneGame(FindOneGameRequest) returns (Game) {}
}

message FindOneGameRequest {
  string id = 1;
}

message Game {
  string id = 1;
  string title = 2;
  string description = 3;
  string releaseDate = 4;
  repeated string tags = 5;
  repeated string commentsId = 6;
}
